--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
         <div class="portfolio-container">
             <div class="portfolio-box">
-                <img src="images/portfolio1.jpg" alt="">
+                <img src="portfolio1.jpg" alt="">
                 <div class="portfolio-layer">
                     <h4>Web Design</h4>
                     <p>Saya baru membuat project ini yaitu portfolio itu sendiri</p>
@@ -97,7 +97,7 @@
             </div>
 
             <div class="portfolio-box">
-                <img src="images/portfolio2.jpg" alt="">
+                <img src="portfolio2.jpg" alt="">
                 <div class="portfolio-layer">
                     <h4>Web Design</h4>
                     <p>Saya baru membuat project ini yaitu portfolio itu sendiri.</p>
@@ -106,7 +106,7 @@
             </div>
 
             <div class="portfolio-box">
-                <img src="images/portfolio3.jpg" alt="">
+                <img src="portfolio3.jpg" alt="">
                 <div class="portfolio-layer">
                     <h4>Web Design</h4>
                     <p>Saya baru membuat project ini yaitu portfolio itu sendiri.</p>
@@ -115,7 +115,7 @@
             </div>
 
             <div class="portfolio-box">
-                <img src="images/portfolio4.jpg" alt="">
+                <img src="portfolio4.jpg" alt="">
                 <div class="portfolio-layer">
                     <h4>Web Design</h4>
                     <p>Saya baru membuat project ini yaitu portfolio itu sendiri.</p>
@@ -124,7 +124,7 @@
             </div>
 
             <div class="portfolio-box">
-                <img src="images/portfolio5.jpg" alt="">
+                <img src="portfolio5.jpg" alt="">
                 <div class="portfolio-layer">
                     <h4>Web Design</h4>
                     <p>Saya baru membuat project ini yaitu portfolio itu sendiri.</p>
@@ -133,7 +133,7 @@
             </div>
 
             <div class="portfolio-box">
-                <img src="images/portfolio6.jpg" alt="">
+                <img src="portfolio6.jpg" alt="">
                 <div class="portfolio-layer">
                     <h4>Web Design</h4>
                     <p>Saya baru membuat project ini yaitu portfolio itu sendiri</p>
